--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.8 2009/07/20 15:16:07 ith Exp $
+% $Id: dbi.tex,v 1.9 2009/07/21 15:11:02 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.8 2009/07/20 15:16:07 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.9 2009/07/21 15:11:02 ith Exp $}
 % \input{paper1}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -72,7 +72,7 @@ the throat region:
 
 Condition (\ref{eq:BMbound-dbi}) may be converted into a 
 corresponding limit on the tensor-scalar ratio by noting from 
-the definition (\ref{defepsilon})
+the definition (\ref{eq:epsdefn-dbiintro})
 that $\dot{\phi}^2 /\Mpl^2 = 2\epsilon H^2/P_{,X}$.
 This implies that the variation of the inflaton field 
 is given by the Lyth bound 
@@ -171,7 +171,7 @@ then implies that
 \frac{(\Delta \rho_* )^6}{h^{4}_*}  \,,
 \end{equation}
 % 
-and substituting the CMB normalization (\ref{observewarp}) and 
+and substituting the CMB normalization (\ref{eq:obswarp-dbiintro}) and 
 condition (\ref{eq:trapeziumlimit}) into the bound (\ref{eq:halfwayconstraint}) 
 yields the upper limit   
 % TODO: Show working
@@ -302,7 +302,7 @@ to be preferred by the current data.
 
 
 In general, the spectral index may be related to the tensor-scalar ratio. 
-After differentiating Eq. (\ref{speedofsound}) 
+After differentiating Eq. (\ref{eq:csdefn-dbiintro}) 
 with respect to cosmic time, and employing Eqs. (\ref{useful}) 
 and (\ref{indices}), we find that 
 % TODO: Show working
@@ -320,7 +320,7 @@ can be converted into observable parameters
 by defining the `tilt' of the non-linearity parameter, 
 $n_{NL} \equiv d \ln f_{NL}/d\ln k$ \cite{brane14}. 
 This implies that $s= - 3 f_{NL} n_{NL} /[2(1+3f_{NL})]$ and     
-substitution of Eqs. (\ref{indices})--(\ref{fnlcs}) 
+substitution of Eqs. (\ref{indices})--(\ref{eq:fnlcs-dbiintro}) 
 into Eq. (\ref{eq:nsconstraint}) then yields
 % TODO: Show working  
 % 
@@ -384,7 +384,7 @@ n_{NL} \simeq -2s > 3 (1-n_s ) f_{NL} > 0.1 f_{NL} \,.
 However, when $f_{NL} \gg 1$, this would violate the slow-roll conditions
 that must be satisfied for a consistent 
 derivation of the perturbation spectra 
-(\ref{amplitudes}). For example, the conservative 
+(\ref{eq:spectra-dbiintro}). For example, the conservative 
 bound $|s| < 0.1$ with $1-n_s \simeq 0.05$ is violated if  
 $f_{NL} > {\cal{O}} (5)$. 
 
@@ -529,12 +529,12 @@ and the scalar perturbation amplitude by
 P_S^2 = \frac{1}{2\pi^2}\frac{H^4}{f_1f_2\dot{\phi}^2}  \,.
 \end{equation}
 % 
-However, the consistency equation (\ref{consistency}) and 
-non-Gaussianity constraint (\ref{fnlcs}) remain unaltered 
+However, the consistency equation (\ref{eq:consistency-dbiintro}) and 
+non-Gaussianity constraint (\ref{eq:fnlcs-dbiintro}) remain unaltered 
 for this more general class 
 of models \cite{lidser2}. It 
 follows, therefore, 
-that the CMB normalization condition (\ref{observewarp}) 
+that the CMB normalization condition (\ref{eq:obswarp-dbiintro}) 
 generalizes to a constraint on the value of $f_1 (\phi_*)$:
 %   
 \begin{equation}
