--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.12 2009/07/20 16:46:21 ith Exp $
+% $Id: multibrane.tex,v 1.13 2009/07/21 15:11:02 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.12 2009/07/20 16:46:21 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.13 2009/07/21 15:11:02 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -186,7 +186,7 @@ exploited this inequality to derive an upper limit on the
 maximum variation of the inflaton field in the throat, 
 $\Delta \phi_{\rm max} < 2\Mpl/\sqrt{N}$, which leads to the 
 corresponding limit $|\Delta \phi |_* < 2\Mpl /\sqrt{N}$ \cite{bmpaper}.  
-Combining this with the constraint (\ref{approxlyth}) therefore 
+Combining this with the constraint (\ref{eq:approxlyth-dbiintro}) therefore 
 yields an upper limit on the tensor-scalar ratio: 
 % 
 \begin{equation}
@@ -245,7 +245,7 @@ the condition
 \end{equation}
 % 
 % TODO: Change to cite chapter not paper
-Finally substituting the constraint (\ref{approxlyth}) 
+Finally substituting the constraint (\ref{eq:approxlyth-dbiintro}) 
 yields the upper limit \cite{lidseyhuston}
 % 
 \begin{equation}
@@ -411,7 +411,7 @@ c_s^2 \simeq \frac{1-f_2X}{2(1-m)} \,,
 % 
 when $X \simeq 1/f_2$. Self-consistency therefore
 requires $m<1$. Moreover
-we find from Eq. (\ref{deffnl}) that
+we find from Eq. (\ref{eq:fnldefn-dbiintro}) that
 %  
 \begin{eqnarray}
 \label{eq:consequence3-multi}
@@ -770,8 +770,8 @@ X \simeq \frac{1}{2} T_3 h^4 \,,
 in the numerator of Eq. (\ref{eq:unifiedgenP-multi}).  
 For the $n=2$ and $n=3$ cases, we have verified by direct 
 calculation that when one calculates the speed of sound 
-(\ref{defcs}) and the non-linearity parameter 
-(\ref{deffnl}) from the general expressions (\ref{eq:2brane}) and (\ref{eq:oddbrane}) 
+(\ref{eq:defcs-dbiintro}) and the non-linearity parameter 
+(\ref{eq:fnldefn-dbiintro}) from the general expressions (\ref{eq:2brane}) and (\ref{eq:oddbrane}) 
 and then imposes the relativistic
 limit (\ref{eq:rellimit-multi}), one arrives at the identical result 
 by starting explicitly with Eq. (\ref{eq:unifiedP-multi}).
@@ -825,7 +825,7 @@ c_sP_{,X} \simeq -1.3 \sqrt{1+(n-1)^2Y} \fnl \,.
 
 We first consider the LH bound (\ref{eq:LHbound}). This applies at least for all
 UV scenarios. It follows after substitution of the relativistic limit
-(\ref{eq:rellimit-multi}) into the scalar perturbation amplitude, Eq. (\ref{eqn:Ps2}),
+(\ref{eq:rellimit-multi}) into the scalar perturbation amplitude, Eq. (\ref{eq:Ps-dbiintro}),
 that 
 % 
 \begin{equation}
@@ -834,7 +834,7 @@ that
 \frac{1}{\fnl}\,.
 \end{equation}
 % 
-Substituting the tensor-scalar ratio (\ref{defr}) into  
+Substituting the tensor-scalar ratio (\ref{eq:rdefn-dbiintro}) into  
 Eq. (\ref{eq:usefulPs-multi}) then results in a constraint on the magnitude of 
 the warp factor during observable inflation:
 %  
