--- a/ihformat.sty
+++ b/ihformat.sty
@@ -1,7 +1,7 @@
 % % % % % % % % % % % % % 
 %  Ian Huston - ihformat.sty
 %  formatting and macros
-%  $Id: ihformat.sty,v 1.12 2009/07/20 10:43:52 ith Exp $
+%  $Id: ihformat.sty,v 1.13 2009/07/21 16:22:03 ith Exp $
 % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihformat}
@@ -19,13 +19,19 @@
 \def\version$#1,v #2 #3${} }%
 % \renewcommand{\version}[$#1,v #2 #3 #4$]{#2, #3}}%
 % Use the following line in each file to specify revision, date
-% \renewcommand{\CVSrevision}{\version$Id: ihformat.sty,v 1.12 2009/07/20 10:43:52 ith Exp $}
+% \renewcommand{\CVSrevision}{\version$Id: ihformat.sty,v 1.13 2009/07/21 16:22:03 ith Exp $}
 
 % Should we use showlabels? Set with labels option, default is off.
 \newboolean{@showlabels}
 \setboolean{@showlabels}{false}
 \DeclareOption{labels}{%
 \setboolean{@showlabels}{true} }%
+
+% Use hyperref?
+\newboolean{@hyperref}
+\setboolean{@hyperref}{false}
+\DeclareOption{hyperref}{%
+\setboolean{@hyperref}{true} }%
 % End of options
 
 \ExecuteOptions{CVSoff}
@@ -56,7 +62,7 @@
 
 
 % Natbib package
-\RequirePackage{natbib}
+\RequirePackage[numbers]{natbib}
 
 
 
@@ -64,7 +70,7 @@
 \RequirePackage{ihmacros}
 
 % Hyperlinking without footnotes.
-\RequirePackage[pdftex, colorlinks, hyperfootnotes=false]{hyperref}
+\RequirePackage[pdftex,colorlinks,hyperfootnotes=false]{hyperref}
 
 % Should we use showlabels?
 \ifthenelse{\boolean{@showlabels}}{\RequirePackage[inline]{showlabels}}{}
