--- a/thesis.tex
+++ b/thesis.tex
@@ -1,13 +1,14 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.16 2009/07/20 16:46:35 ith Exp $
+% $Id: thesis.tex,v 1.17 2009/07/21 16:22:09 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
 %twoside,
 12pt,
-listof=totoc,
-bibliography=totoc,
-onehalfspacing
+bibtotoc, % Include bibliography in contents
+liststotoc, % Include lists of figures and tables in contents
+idxtotoc, % Include index in contents
+onehalfspacing % onehalfspacing or doublespacing
 %,openright
 ]
 {icldt}
@@ -17,23 +18,23 @@ onehalfspacing
 % My formatting package
 % CVSon for cvs revision number in footers
 % CVSoff is default
-\usepackage[CVSon, labels]{ihformat}
+\usepackage[CVSon, labels, hyperref]{ihformat}
 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.16 2009/07/20 16:46:35 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.17 2009/07/21 16:22:09 ith Exp $}
 % \usepackage[inline]{showlabels}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Include list
 \includeonly{
-% abstract,
-% acknowledgements,
-% mainintro,
+abstract,
+acknowledgements,
+mainintro,
 dbi/dbi-intro,
 dbi/dbi,
 dbi/multibrane,
-% numerical/numerical,
+numerical/numerical,
 % theend
 }
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
