--- a/ihformat.sty
+++ b/ihformat.sty
@@ -1,7 +1,7 @@
 % % % % % % % % % % % % % 
 %  Ian Huston - ihformat.sty
 %  formatting and macros
-%  $Id: ihformat.sty,v 1.13 2009/07/21 16:22:03 ith Exp $
+%  $Id: ihformat.sty,v 1.14 2009/07/22 10:38:29 ith Exp $
 % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihformat}
@@ -19,7 +19,7 @@
 \def\version$#1,v #2 #3${} }%
 % \renewcommand{\version}[$#1,v #2 #3 #4$]{#2, #3}}%
 % Use the following line in each file to specify revision, date
-% \renewcommand{\CVSrevision}{\version$Id: ihformat.sty,v 1.13 2009/07/21 16:22:03 ith Exp $}
+% \renewcommand{\CVSrevision}{\version$Id: ihformat.sty,v 1.14 2009/07/22 10:38:29 ith Exp $}
 
 % Should we use showlabels? Set with labels option, default is off.
 \newboolean{@showlabels}
@@ -28,10 +28,10 @@
 \setboolean{@showlabels}{true} }%
 
 % Use hyperref?
-\newboolean{@hyperref}
-\setboolean{@hyperref}{false}
+\newboolean{@usehyperref}
+\setboolean{@usehyperref}{false}
 \DeclareOption{hyperref}{%
-\setboolean{@hyperref}{true} }%
+\setboolean{@usehyperref}{true} }%
 % End of options
 
 \ExecuteOptions{CVSoff}
@@ -70,7 +70,7 @@
 \RequirePackage{ihmacros}
 
 % Hyperlinking without footnotes.
-\RequirePackage[pdftex,colorlinks,hyperfootnotes=false]{hyperref}
+\ifthenelse{\boolean{@usehyperref}}{\RequirePackage[pdftex,colorlinks,hyperfootnotes=false]{hyperref}}{}
 
 % Should we use showlabels?
 \ifthenelse{\boolean{@showlabels}}{\RequirePackage[inline]{showlabels}}{}
