--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.17 2009/07/21 16:22:09 ith Exp $
+% $Id: thesis.tex,v 1.18 2009/07/22 10:38:44 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
 %twoside,
@@ -18,10 +18,13 @@ onehalfspacing % onehalfspacing or doublespacing
 % My formatting package
 % CVSon for cvs revision number in footers
 % CVSoff is default
-\usepackage[CVSon, labels, hyperref]{ihformat}
+\usepackage[CVSon, 
+            labels,
+            hyperref
+            ]{ihformat}
 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.17 2009/07/21 16:22:09 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.18 2009/07/22 10:38:44 ith Exp $}
 % \usepackage[inline]{showlabels}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
@@ -34,7 +37,7 @@ mainintro,
 dbi/dbi-intro,
 dbi/dbi,
 dbi/multibrane,
-numerical/numerical,
+% numerical/numerical,
 % theend
 }
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -100,8 +103,8 @@ numerical/numerical,
 \begin{singlespace}
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Bibliography
-\bibliography{../central-store}
-\bibliographystyle{thesis}
+% \bibliography{../central-store}
+% \bibliographystyle{thesis}
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 
 % % % % % % % % % % % % % % % % % % % % % % % % % 
