--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.9 2009/07/21 15:11:02 ith Exp $
+% $Id: dbi.tex,v 1.10 2009/07/28 09:23:48 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.9 2009/07/21 15:11:02 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.10 2009/07/28 09:23:48 ith Exp $}
 % \input{paper1}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -510,7 +510,7 @@ Eq. (\ref{defP}) through the field redefinition
 % 
 \begin{equation}
 \label{eq:defvarphi}
-\varphi \equiv \int d \phi \sqrt{\frac{f_1f_2}{2}}  \,.
+\tilde{\varphi} \equiv \int d \phi \sqrt{\frac{f_1f_2}{2}}  \,.
 \end{equation}
 % 
 This implies that the sound speed of fluctuations in 
@@ -559,8 +559,8 @@ is straightforward to show that
 
 Eq. (\ref{eq:defvarphi}) also allows us to deduce 
 that the infinitesimal variation of the effective 
-field $\varphi$ is given by the Lyth bound, 
-$(\Delta \varphi /\Mpl )^2 \simeq 
+field $\tilde{\varphi}$ is given by the Lyth bound, 
+$(\Delta \tilde{\varphi} /\Mpl )^2 \simeq 
 r (\Delta {\cal{N}})^2/8$. This implies that 
 the variation of the inflaton field during inflation is 
 % 
