--- a/ihmacros.sty
+++ b/ihmacros.sty
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % 
 % ihmacros.sty - Ian Huston
-% $Id: ihmacros.sty,v 1.5 2009/07/14 17:16:18 ith Exp $
+% $Id: ihmacros.sty,v 1.6 2009/07/28 09:24:02 ith Exp $
 % % % % % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihmacros}
@@ -53,8 +53,10 @@
 \newcommand{\fnl}{\ensuremath{f_{\mathrm{NL}}}}
 \newcommand{\tnl}{\tau_{\mathrm{NL}}}
 % 
+% Scientific notation
 \newcommand{\e}[1]{\ensuremath{\times 10^{#1}}}
 %
+% Potentials
 \newcommand{\lambdaphifour}{\frac{1}{4}\lambda\varphi^4}
 \newcommand{\msqphisq}{\frac{1}{2} m^2 \varphi^2}
 % 
