--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.13 2009/07/21 15:11:02 ith Exp $
+% $Id: multibrane.tex,v 1.14 2009/07/28 09:51:26 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.13 2009/07/21 15:11:02 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.14 2009/07/28 09:51:26 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -54,7 +54,7 @@ becomes independent of the throat charge, $N$, which weakens the upper bound on
 the tensor-scalar ratio to $r \lsim 0.04$. Strictly speaking this is 
 only true for the ${\rm D7}$-brane case, since the
 wrapped ${\rm D5}$-brane imposes 
-$\Delta \phi \sim N^{-1/4}$.
+$\Delta \varphi \sim N^{-1/4}$.
 However in arriving at this bound, it was assumed that the 
 backreaction effects of any fluxes in the throat were 
 negligible. Kobayashi \etal \cite{Kobayashi:2007hm} 
@@ -166,7 +166,7 @@ $g_s$ is the string coupling and $m_s$ is the string mass scale.
 Generally the value of the inflaton field 
 is determined by the radial position of the 
 ${\rm D3}$-brane in the throat, 
-$\phi \equiv \rho \sqrt{T_3}$, where $T_3 \equiv  
+$\varphi \equiv \rho \sqrt{T_3}$, where $T_3 \equiv  
 m_s^4/[(2\pi)^3g_s]$ is the brane tension. 
 
 
@@ -184,8 +184,8 @@ where $V_{6,{\rm th}} \lsim V_6$ denotes the throat volume.
 For an $AdS_5 \times X_5$ throat, Baumann \& McAllister (BM)
 exploited this inequality to derive an upper limit on the 
 maximum variation of the inflaton field in the throat, 
-$\Delta \phi_{\rm max} < 2\Mpl/\sqrt{N}$, which leads to the 
-corresponding limit $|\Delta \phi |_* < 2\Mpl /\sqrt{N}$ \cite{bmpaper}.  
+$\Delta \varphi_{\rm max} < 2\Mpl/\sqrt{N}$, which leads to the 
+corresponding limit $|\Delta \varphi |_* < 2\Mpl /\sqrt{N}$ \cite{bmpaper}.  
 Combining this with the constraint (\ref{eq:approxlyth-dbiintro}) therefore 
 yields an upper limit on the tensor-scalar ratio: 
 % 
@@ -212,7 +212,7 @@ V_{6,{\rm th}}$, it follows that
 %  
 \begin{equation}
 \label{eq:firstbound-multi}
-\left(\frac{\Delta \phi}{\Mpl}\right)^2_* < \frac{T_3 \kappa_{10}^2
+\left(\frac{\Delta \varphi}{\Mpl}\right)^2_* < \frac{T_3 \kappa_{10}^2
 (\Delta \rho_*)^2}{| \Delta V_{6*}|} \,.
 \end{equation}
 % 
@@ -221,7 +221,7 @@ inflaton field during observable inflation was less than unity:
 % 
 \begin{equation}
 \label{eq:delta1constraint}
-|\Delta \phi_* | <  \phi_* \,.
+|\Delta \varphi_* | <  \varphi_* \,.
 \end{equation}
 %  
 This condition is necessarily satisfied in UV
@@ -229,7 +229,7 @@ versions of the scenario,
 where the brane is moving towards the tip of the throat, but must be 
 assumed as a further constraint in IR versions 
 where the brane moves out of the throat, since in these latter cases
-$\phi_*$ could be very small. Combining the limit 
+$\varphi_*$ could be very small. Combining the limit 
 (\ref{eq:delta1constraint}) with Eq. (\ref{eq:approxvol}) then implies that
 %  
 \begin{equation}
@@ -240,7 +240,7 @@ and substituting this constraint into the bound (\ref{eq:firstbound-multi}) yiel
 the condition
 %  
 \begin{equation}
-\left( \frac{\Delta \phi}{\Mpl} \right)_*^6 < \frac{\pi T_3}{\Vol} 
+\left( \frac{\Delta \varphi}{\Mpl} \right)_*^6 < \frac{\pi T_3}{\Vol} 
 \left( \frac{h_*}{\Mpl} \right)^4 \,.
 \end{equation}
 % 
@@ -296,11 +296,11 @@ Eq. (\ref{DBIaction-multi})  takes the form
 %  
 \begin{equation}
 \label{eq:DBIkinetic}
-P (\phi , X) = -T(\phi ) \sqrt{1-2T^{-1}(\phi ) X} + T(\phi ) - V(\phi ) \,,
+P (\varphi , X) = -T(\varphi ) \sqrt{1-2T^{-1}(\varphi ) X} + T(\varphi ) - V(\varphi ) \,,
 \end{equation}
 % 
-where $T(\phi ) = T_3 h^4 (\phi )$ 
-is the warped brane tension and  $V(\phi )$ is the 
+where $T(\varphi ) = T_3 h^4 (\varphi )$ 
+is the warped brane tension and  $V(\varphi )$ is the 
 inflaton potential. 
 Typically in warped compactifications of 
 IIB supergravity, this potential is determined by the 
@@ -378,11 +378,11 @@ weakening of the gravitational wave constraints.}
 % 
 \begin{equation}
 \label{eq:gensoln-multi}
-P (\phi , X) = f_1 (\phi ) \left[ 1-f_2 (\phi ) X 
-\right]^m -f_3(\phi ) \,,
+P (\varphi , X) = f_1 (\varphi ) \left[ 1-f_2 (\varphi ) X 
+\right]^m -f_3(\varphi ) \,,
 \end{equation}
 % 
-where $f_i (\phi )$ are arbitrary functions of the scalar 
+where $f_i (\varphi )$ are arbitrary functions of the scalar 
 field and
 %  
 \begin{equation}
@@ -518,7 +518,7 @@ transform under representations of the algebra of $SO(3) \sim SU(2)$ by making
 the identifications
 % 
 \begin{equation}
-\phi^i = R \alpha^i \hspace{1cm} i =1,  \ldots 3 \,,
+\varphi^i = R \alpha^i \hspace{1cm} i =1,  \ldots 3 \,,
 \end{equation}
 % 
 where $R$ is some scale with canonical mass dimension, and the $\alpha^i$ are
@@ -752,7 +752,7 @@ where
 % 
 \begin{equation}
 \label{eq:defY-multi}
-Y \equiv \frac{4}{(n-1)^4 \lambda^2 T_3^2} \left( \frac{\phi}{h} \right)^4 \,,
+Y \equiv \frac{4}{(n-1)^4 \lambda^2 T_3^2} \left( \frac{\varphi}{h} \right)^4 \,,
 \end{equation}
 % 
 \begin{equation}
@@ -808,8 +808,8 @@ general solution (\ref{eq:gensoln-multi}), where $m=-1/2$ and
 % 
 \begin{equation}
 \label{eq:fdefns-multi}
-f_1 (\phi) = 2T_3 h^4 \sqrt{1+(n-1)^2Y} , \qquad 
-f_2 (\phi) = \frac{2}{T_3 h^4} \,.
+f_1 (\varphi) = 2T_3 h^4 \sqrt{1+(n-1)^2Y} , \qquad 
+f_2 (\varphi) = \frac{2}{T_3 h^4} \,.
 \end{equation}
 % 
 We may therefore immediately conclude from Eq. (\ref{eq:consequence4-multi}) that $\fnl
@@ -1170,7 +1170,7 @@ and the general solution to Eq. (\ref{eq:lineargen-multi}) is given by
 %  
 \begin{equation}
 \label{eq:gensolnlinear-multi}
-\frac{P_{,XX}}{P_{,X}} = \frac{1}{X\left[ f_2(\phi) X^{(\alpha -6)/2\alpha}
+\frac{P_{,XX}}{P_{,X}} = \frac{1}{X\left[ f_2(\varphi) X^{(\alpha -6)/2\alpha}
 -2 \right] } \, .
 \end{equation}
 % 
@@ -1178,11 +1178,11 @@ Integrating a second time implies that
 % 
 \begin{equation}
 \label{eq:secondint-multi}
-P_{,X} = f_1 (\phi ) \left( 1- f_2(\phi ) X^{-s} \right)^{1/(2s)}  \, ,
+P_{,X} = f_1 (\varphi ) \left( 1- f_2(\varphi ) X^{-s} \right)^{1/(2s)}  \, ,
 \end{equation}
 % 
 where $s \equiv (\alpha -6 )/(2 \alpha)$ and we have redefined 
-the arbitrary integration functions $f_i(\phi )$.  
+the arbitrary integration functions $f_i(\varphi )$.  
 Finally Eq. (\ref{eq:secondint-multi}) can be formally integrated 
 in terms of a hypergeometric function
 %  
@@ -1202,7 +1202,7 @@ of the expansion of the hypergeometric function.
 
 
 The special case of $\alpha =2$ $(s=-1)$ implies (after a 
-further redefinition of the functions $f_i (\phi ))$ that 
+further redefinition of the functions $f_i (\varphi ))$ that 
 % 
 \begin{equation}
 \label{eq:DBIsoln-multi}
@@ -1214,7 +1214,7 @@ and this corresponds to the standard DBI action (\ref{eq:DBIkinetic})
 
 
 The case $\alpha =18/5$ $(s=-1/3)$ can also be expressed in terms 
-of elementary functions, again after redefinition of the $f_i (\phi)$: 
+of elementary functions, again after redefinition of the $f_i (\varphi)$: 
 % 
 \begin{equation}
 P = \frac{f_1\left[8 - 4f_2X^{1/3}
@@ -1225,7 +1225,7 @@ Note that this expression appears in a slightly different
 form to that in (\ref{eq:unifiedgenP-multi}). 
 However in deriving (\ref{eq:unifiedgenP-multi}) we assumed the
 relativistic limit, which in turn imposes a non-trivial 
-relation between $X$ and $\phi$. Using this, and with a 
+relation between $X$ and $\varphi$. Using this, and with a 
 suitable redefinition of the functions, we can
 easily transform the above expression into the required form.
 
