--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.7 2009/07/21 15:10:59 ith Exp $
+% $Id: dbi-intro.tex,v 1.8 2009/07/28 09:51:26 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.7 2009/07/21 15:10:59 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.8 2009/07/28 09:51:26 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -190,24 +190,24 @@ of a probe ${\rm D3}$-brane in a warped throat is determined
 by an effective, four-dimensional DBI action. 
 The inflaton field is related to the radial 
 position of the brane by 
-$\phi \equiv \sqrt{T_3} \rho$, where $T_3 =m_s^4/[(2\pi )^3 g_s ]$ 
+$\varphi \equiv \sqrt{T_3} \rho$, where $T_3 =m_s^4/[(2\pi )^3 g_s ]$ 
 is the brane tension. The action is then given by 
 % 
 \begin{eqnarray}
 \label{eq:DBIaction-dbiintro}
 S=\int  d^4x \sqrt{|g|} \left[ \frac{\Mpl^2}{2} R 
-+ P (\phi , X) \right] \\
++ P (\varphi , X) \right] \\
 \label{defP}
-P( \phi ,X) = - T (\phi)  \sqrt{1 - 2T^{-1} (\phi ) X}
-+T (\phi)  -V(\phi)  \,,
+P( \varphi ,X) = - T (\varphi)  \sqrt{1 - 2T^{-1} (\varphi ) X}
++T (\varphi)  -V(\varphi)  \,,
 \end{eqnarray}
 % 
 where $R$ is the Ricci curvature scalar,
-$X \equiv - \frac{1}{2} g^{\mu\nu} \nabla_{\mu} \phi \nabla_{\nu} \phi$
-is the kinetic energy of the inflaton, $V(\phi )$ denotes 
+$X \equiv - \frac{1}{2} g^{\mu\nu} \nabla_{\mu} \varphi \nabla_{\nu} \varphi$
+is the kinetic energy of the inflaton, $V(\varphi )$ denotes 
 the field's interaction 
-potential and $T(\phi ) = T_3 h^4 (\phi )$
-defines the warped brane tension. We refer to $P(\phi , X)$ as the 
+potential and $T(\varphi ) = T_3 h^4 (\varphi )$
+defines the warped brane tension. We refer to $P(\varphi , X)$ as the 
 `kinetic function' for the inflaton. 
  
 
@@ -218,14 +218,14 @@ varying inflaton can be expressed in the form \cite{brane6}
 % 
 \begin{eqnarray}
 \label{eq:Friedmann-dbiintro}
-3 \Mpl^2 H^2(\phi ) = V(\phi ) -T(\phi ) 
+3 \Mpl^2 H^2(\varphi ) = V(\varphi ) -T(\varphi ) 
 \left[ 1- \sqrt{1+4\Mpl^4T^{-1} H'^2} \right] \\
 \label{useful}
-\dot{\phi} = - \frac{2\Mpl^2H'}{\sqrt{1+4\Mpl^4 T^{-1} H'^2}} \, ,
+\dot{\varphi} = - \frac{2\Mpl^2H'}{\sqrt{1+4\Mpl^4 T^{-1} H'^2}} \, ,
 \end{eqnarray}
 % 
-where $H=H(\phi )$ represents the Hubble parameter
-as a function of the field and a prime denotes $d/d\phi$. 
+where $H=H(\varphi )$ represents the Hubble parameter
+as a function of the field and a prime denotes $d/d\varphi$. 
 
 
 An important consequence of the non-trivial kinetic structure 
@@ -240,7 +240,7 @@ c_s = \frac{1}{P_{,X}} = \sqrt{1 -2T^{-1}X}  \,,
 where a subscripted comma denotes partial differentiation. 
 Furthermore, the condition that the sound speed be real 
 imposes an upper bound on the kinetic energy 
-of the inflaton, $\dot{\phi}^2 < T(\phi)$, which 
+of the inflaton, $\dot{\varphi}^2 < T(\varphi)$, which 
 is independent of the steepness of the potential.
 The motion of the brane is said to be `relativistic' when this bound is 
 close to saturation.
@@ -275,7 +275,7 @@ for the scalar and tensor perturbations are given by \cite{gm}
 \begin{eqnarray}
 \label{eq:spectra-dbiintro}
 P_S^2= \frac{1}{8 \pi^2 \Mpl^2} \frac{H^2}{c_s \epsilon}
-= \frac{H^4}{4\pi^2\dot{\phi}^2}
+= \frac{H^4}{4\pi^2\dot{\varphi}^2}
 \\
 P_T^2 = \frac{2}{\pi^2} \frac{H^2}{\Mpl^2} 
 \\
@@ -341,7 +341,7 @@ during observable inflation:
 % 
 \begin{equation}
 \label{eq:obswarp-dbiintro}
-\frac{T (\phi_*)}{\Mpl^4}  = 
+\frac{T (\varphi_*)}{\Mpl^4}  = 
 \frac{\pi^2}{16} r^2P_S^2 \left( 1+\frac{1}{3f_{NL}} \right) \,,
 \end{equation}
 % 
@@ -405,18 +405,18 @@ by an effective action of the form
 \begin{equation}
 \label{eq:DBIaction-dbiintro2}
 S=\int  d^4x \sqrt{|g|} \left[ \frac{\Mpl^2}{2} R 
-+ P (\phi , X) \right] \,,
++ P (\varphi , X) \right] \,,
 \end{equation}
 % 
 where $R$ is the Ricci curvature scalar, 
-$X \equiv -\frac{1}{2}g^{\mu \nu}\nabla_\mu \phi \nabla_\nu \phi$
-denotes the kinetic energy of the inflaton field $\phi$, and the function  
-$P (\phi , X)$ is referred to as the `kinetic function'.  
+$X \equiv -\frac{1}{2}g^{\mu \nu}\nabla_\mu \varphi \nabla_\nu \varphi$
+denotes the kinetic energy of the inflaton field $\varphi$, and the function  
+$P (\varphi , X)$ is referred to as the `kinetic function'.  
 
 
 We assume that the four-dimensional universe is   
 spatially flat and isotropic and sourced by an  
-homogeneous inflaton field, $\phi =\phi (t)$, with energy 
+homogeneous inflaton field, $\varphi =\varphi (t)$, with energy 
 density $E = 2X\PX - P$, where a subscripted comma denotes partial
 differentiation. 
 We further assume that the inflaton dynamics  
@@ -503,7 +503,7 @@ is related to the tensor-scalar amplitude by \cite{lyth,bmpaper}
 \begin{equation}
 \label{eq:genlyth-dbiintro}
 \frac{1}{\Mpl^2}
-\left( \frac{d \phi}{d \cal{N}} \right)^2 = \frac{r}{8 c_s P_{,X}} \,,
+\left( \frac{d \varphi}{d \cal{N}} \right)^2 = \frac{r}{8 c_s P_{,X}} \,,
 \end{equation}
 % 
 where ${\cal{N}} \equiv \int dt \, H$ denotes the number of e-foldings.
@@ -520,7 +520,7 @@ inflation and the end of inflation is then given by
 % 
 \begin{equation}
 \label{eq:totalfield-dbiintro}
-\frac{\Delta \phi_{\rm inf}}{\Mpl} = 
+\frac{\Delta \varphi_{\rm inf}}{\Mpl} = 
 \left( \frac{r}{8c_sP_{,X}} \right)_*^{1/2} {\cal{N}}_{\rm eff} \,,
 \end{equation}
 % 
@@ -540,7 +540,7 @@ field is given approximately by \cite{lyth,bmpaper}
 % 
 \begin{equation}
 \label{eq:approxlyth-dbiintro}
-\left( \frac{\Delta \phi}{\Mpl} \right)_*^2 \simeq 
+\left( \frac{\Delta \varphi}{\Mpl} \right)_*^2 \simeq 
 \frac{(\Delta {\cal{N}}_*)^2}{8} \left( \frac{r}{c_sP_{,X}} \right)_* \,.
 \end{equation}
 % 
